; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_db.c_db_delete_signs.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_db.c_db_delete_signs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@db_enabled = common dso_local global i32 0, align 4
@delete_signs_stmt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @db_delete_signs(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @db_enabled, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %3
  br label %24

10:                                               ; preds = %3
  %11 = load i32, i32* @delete_signs_stmt, align 4
  %12 = call i32 @sqlite3_reset(i32 %11)
  %13 = load i32, i32* @delete_signs_stmt, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @sqlite3_bind_int(i32 %13, i32 1, i32 %14)
  %16 = load i32, i32* @delete_signs_stmt, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @sqlite3_bind_int(i32 %16, i32 2, i32 %17)
  %19 = load i32, i32* @delete_signs_stmt, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @sqlite3_bind_int(i32 %19, i32 3, i32 %20)
  %22 = load i32, i32* @delete_signs_stmt, align 4
  %23 = call i32 @sqlite3_step(i32 %22)
  br label %24

24:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @sqlite3_reset(i32) #1

declare dso_local i32 @sqlite3_bind_int(i32, i32, i32) #1

declare dso_local i32 @sqlite3_step(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
